Reset alerts state on dismiss. Added media queries for the chosen restaurant on mobile. Fixed issue with restaurant being added if a cuisine was selected and nothing else. Styled the alerts font weight. Removed more unnecessary code. Added text to show there’s no restaurants if not any. Added UncontrolledAlerts for Add Restaurants form.

--- a/ClientApp/src/Components/AddRestaurant/AddRestaurant.css
+++ b/ClientApp/src/Components/AddRestaurant/AddRestaurant.css
@@ -37,6 +37,18 @@
     border-top: 4px solid #e64d00;
 }
 
+/* Restaurant Exists Alert Link */
+
+.view-restaurants-alert-link {
+    color: #000;
+    text-decoration: underline;
+    margin: -0.5em 0 0 -1rem;
+}
+
+.view-restaurants-alert-link:hover {
+    color: #000;
+}
+
 /* Form */
 
 .add-restaurant-form {
