--- a/ClientApp/src/Components/ViewRestaurants/ViewRestaurants.css
+++ b/ClientApp/src/Components/ViewRestaurants/ViewRestaurants.css
@@ -53,6 +53,22 @@
     flex-direction: column;
 }
 
+/* No Restaurants */
+
+.view-restaurants-none {
+    margin: 20px 0;
+    font-size: 30px;
+    color: #000;
+    text-align: center;
+}
+
+.view-restaurants-none-link {
+    font-size: 23px;
+    color: #e64d00;
+    text-align: center;
+    text-decoration: underline;
+}
+
 /* Search Bar */
 
 .view-restaurants-search-container {
